--- a/style.css
+++ b/style.css
@@ -42,6 +42,25 @@ ul {
     opacity: 0.8;
 }
 
+h1, h2, h3, h4, h5, h6 {
+    font-weight: 500;
+    margin: 0;
+}
+
+img {
+    max-width: 100%;
+}
+
+p {
+    margin: 0;
+}
+
+p+p {
+    margin-top: 15px;
+}
+
+/* шапка */
+
 .header {
     padding: 25px 0;
 }
@@ -72,10 +91,76 @@ transition: opacity 0.3s;
     opacity: 1;
 }
 
-.header_logo {
+/* Приветственная секция */
 
+.welcome {
+    background-image: url('images/welcome-bg.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    padding: 240px 0;
+    margin-top: -100px;
+    box-sizing: border-box;
+    min-height: 100vh;
 }
 
-.header_nav {
+.welcome_subtitle {
+    margin-bottom: 7px;
+    font-size: 14px;
+    letter-spacing: 0.1em;
+}
 
+.welcome_title {
+    font-size: 58px;
+}
+
+.welcome_desk {
+    font-size: 18px;
+    opacity: 0.7;
+    margin: 40px 0;
+}
+
+.welcome_text {
+    width: 550px;
+}
+
+/* Список еды */
+
+.food-list {
+    padding: 100px 0;
+}
+
+.food-list_card {
+    width: 260px;
+    overflow: hidden;
+    background-color: #312F30;
+    border-radius: 10px;
+    text-align: center;
+}
+
+.food-list_image {
+    width: 100%;
+    height: 175px;
+    object-fit: cover;
+}
+
+.food-list_title {
+    font-size: 20px;
+    margin-bottom: 15px;
+}
+
+.food-list_desc {
+    font-size: 16px;
+    opacity: 0.7;
+}
+
+.food-list .container {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    gap: 40px 10px;
+}
+
+.food-list_text-wrapper {
+    padding: 30px 20px;
 }
